{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 886,
  "lineage": "d32ccc20-9871-fb90-34e1-bcde729a53f5",
  "resources": [
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0707eb5d413af39fb",
            "arn": "arn:aws:ec2:us-east-1:182399709644:elastic-ip/eipalloc-0707eb5d413af39fb",
            "association_id": "eipassoc-0dac2d5fee06de871",
            "domain": "vpc",
            "id": "eipalloc-0707eb5d413af39fb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ae9cba7fbbd2985",
            "private_dns": "ip-172-32-0-122.ec2.internal",
            "private_ip": "172.32.0.122",
            "public_dns": "ec2-35-153-223-219.compute-1.amazonaws.com",
            "public_ip": "35.153.223.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "todo-pub-eip-001"
            },
            "tags_all": {
              "Name": "todo-pub-eip-001"
            },
            "vpc": true
          }
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c57d553bc60d162",
            "arn": "arn:aws:ec2:us-east-1:182399709644:elastic-ip/eipalloc-04c57d553bc60d162",
            "association_id": "eipassoc-03f23e78fc165f91a",
            "domain": "vpc",
            "id": "eipalloc-04c57d553bc60d162",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d7b631d2dfe02a59",
            "private_dns": "ip-172-32-1-247.ec2.internal",
            "private_ip": "172.32.1.247",
            "public_dns": "ec2-13-216-185-238.compute-1.amazonaws.com",
            "public_ip": "13.216.185.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "todo-pub-eip-002"
            },
            "tags_all": {
              "Name": "todo-pub-eip-002"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:internet-gateway/igw-0f36b833a8c5f668f",
            "id": "igw-0f36b833a8c5f668f",
            "owner_id": "182399709644",
            "tags": {
              "Name": "todo-pub-igw-001"
            },
            "tags_all": {
              "Name": "todo-pub-igw-001"
            },
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0707eb5d413af39fb",
            "association_id": "eipassoc-0dac2d5fee06de871",
            "connectivity_type": "public",
            "id": "nat-044e65a699ee2b8e2",
            "network_interface_id": "eni-09ae9cba7fbbd2985",
            "private_ip": "172.32.0.122",
            "public_ip": "35.153.223.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f8cbbec5a857c820",
            "tags": {
              "Name": "todo-pub-natgw-001"
            },
            "tags_all": {
              "Name": "todo-pub-natgw-001"
            }
          },
          "dependencies": [
            "module.todo-api.aws_eip.this",
            "module.todo-api.aws_subnet.public",
            "module.todo-api.aws_vpc.this"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c57d553bc60d162",
            "association_id": "eipassoc-03f23e78fc165f91a",
            "connectivity_type": "public",
            "id": "nat-02ade56d5f67df39b",
            "network_interface_id": "eni-0d7b631d2dfe02a59",
            "private_ip": "172.32.1.247",
            "public_ip": "13.216.185.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0475a32b0dd7b37e8",
            "tags": {
              "Name": "todo-pub-natgw-002"
            },
            "tags_all": {
              "Name": "todo-pub-natgw-002"
            }
          },
          "dependencies": [
            "module.todo-api.aws_eip.this",
            "module.todo-api.aws_subnet.public",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_internet_to_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv-subnet-1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0db914cbc712131551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-044e65a699ee2b8e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db914cbc71213155",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_eip.this",
            "module.todo-api.aws_nat_gateway.this",
            "module.todo-api.aws_route_table.private",
            "module.todo-api.aws_subnet.public",
            "module.todo-api.aws_vpc.this"
          ]
        },
        {
          "index_key": "priv-subnet-2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ef12d19e68047d901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-044e65a699ee2b8e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef12d19e68047d90",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_eip.this",
            "module.todo-api.aws_nat_gateway.this",
            "module.todo-api.aws_route_table.private",
            "module.todo-api.aws_subnet.public",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv-subnet-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:route-table/rtb-0db914cbc71213155",
            "id": "rtb-0db914cbc71213155",
            "owner_id": "182399709644",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044e65a699ee2b8e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-int-rt-001"
            },
            "tags_all": {
              "Name": "todo-int-rt-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        },
        {
          "index_key": "priv-subnet-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:route-table/rtb-0ef12d19e68047d90",
            "id": "rtb-0ef12d19e68047d90",
            "owner_id": "182399709644",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044e65a699ee2b8e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-int-rt-002"
            },
            "tags_all": {
              "Name": "todo-int-rt-002"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:route-table/rtb-0f352c57dd8da4701",
            "id": "rtb-0f352c57dd8da4701",
            "owner_id": "182399709644",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f36b833a8c5f668f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-pub-rt-001"
            },
            "tags_all": {
              "Name": "todo-pub-rt-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_internet_gateway.this",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046d75d5ac668bbc0",
            "route_table_id": "rtb-0db914cbc71213155",
            "subnet_id": "subnet-0fa5020a03280c3c3"
          },
          "dependencies": [
            "module.todo-api.aws_route_table.private",
            "module.todo-api.aws_subnet.private",
            "module.todo-api.aws_vpc.this"
          ]
        },
        {
          "index_key": "priv-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050104a88083e74c5",
            "route_table_id": "rtb-0ef12d19e68047d90",
            "subnet_id": "subnet-094430b108b344ee2"
          },
          "dependencies": [
            "module.todo-api.aws_route_table.private",
            "module.todo-api.aws_subnet.private",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06155e69ef6a9fd76",
            "route_table_id": "rtb-0f352c57dd8da4701",
            "subnet_id": "subnet-0f8cbbec5a857c820"
          },
          "dependencies": [
            "module.todo-api.aws_internet_gateway.this",
            "module.todo-api.aws_route_table.public",
            "module.todo-api.aws_subnet.public",
            "module.todo-api.aws_vpc.this"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0743dc800523e1fdc",
            "route_table_id": "rtb-0f352c57dd8da4701",
            "subnet_id": "subnet-0475a32b0dd7b37e8"
          },
          "dependencies": [
            "module.todo-api.aws_internet_gateway.this",
            "module.todo-api.aws_route_table.public",
            "module.todo-api.aws_subnet.public",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:security-group/sg-03526d48b5ef4af71",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03526d48b5ef4af71",
            "ingress": [],
            "name": "todo-lambda-sg20250204213644153600000007",
            "name_prefix": "todo-lambda-sg",
            "owner_id": "182399709644",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:security-group/sg-04552a1d11c2fb527",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04552a1d11c2fb527",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WARNING: Allow PostgreSQL access from anywhere (Development Only - Not for Production)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL access from Lambda functions",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03526d48b5ef4af71"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "todo-rds-sg20250204213644149400000006",
            "name_prefix": "todo-rds-sg",
            "owner_id": "182399709644",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:subnet/subnet-0fa5020a03280c3c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa5020a03280c3c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399709644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-pvt-vlan-001"
            },
            "tags_all": {
              "Name": "todo-pvt-vlan-001"
            },
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        },
        {
          "index_key": "priv-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:subnet/subnet-094430b108b344ee2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094430b108b344ee2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399709644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-pvt-vlan-002"
            },
            "tags_all": {
              "Name": "todo-pvt-vlan-002"
            },
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:subnet/subnet-0f8cbbec5a857c820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8cbbec5a857c820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182399709644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-pub-vlan-001"
            },
            "tags_all": {
              "Name": "todo-pub-vlan-001"
            },
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:subnet/subnet-0475a32b0dd7b37e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475a32b0dd7b37e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182399709644",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-pub-vlan-002"
            },
            "tags_all": {
              "Name": "todo-pub-vlan-002"
            },
            "vpc_id": "vpc-0b637228e04ecdfe3"
          },
          "dependencies": [
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:vpc/vpc-0b637228e04ecdfe3",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-0960d7215993051e7",
            "default_route_table_id": "rtb-0c7c6d0640323e208",
            "default_security_group_id": "sg-0f0ee0ec093532ce6",
            "dhcp_options_id": "dopt-063fa570b670ace60",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b637228e04ecdfe3",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-08a66e2809b4b4c06",
            "ipv6_cidr_block": "2600:1f18:3a64:7800::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7c6d0640323e208",
            "owner_id": "182399709644",
            "tags": {
              "Name": "todo-vpc-001"
            },
            "tags_all": {
              "Name": "todo-vpc-001"
            }
          }
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lambda_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:security-group-rule/sgr-01fbcd91f573fa2c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01fbcd91f573fa2c5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03526d48b5ef4af71",
            "security_group_rule_id": "sgr-01fbcd91f573fa2c5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_security_group.lambda",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:security-group-rule/sgr-02c4d8c591fad492a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02c4d8c591fad492a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04552a1d11c2fb527",
            "security_group_rule_id": "sgr-02c4d8c591fad492a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_security_group.rds",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_ingress_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:security-group-rule/sgr-062a52cb5425c42c5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow PostgreSQL access from Lambda functions",
            "from_port": 5432,
            "id": "sgr-062a52cb5425c42c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03526d48b5ef4af71",
            "security_group_id": "sg-04552a1d11c2fb527",
            "security_group_rule_id": "sgr-062a52cb5425c42c5",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_security_group.lambda",
            "module.todo-api.aws_security_group.rds",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-api",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_ingress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399709644:security-group-rule/sgr-0b2cfebf840acf84a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "WARNING: Allow PostgreSQL access from anywhere (Development Only - Not for Production)",
            "from_port": 5432,
            "id": "sgr-0b2cfebf840acf84a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04552a1d11c2fb527",
            "security_group_rule_id": "sgr-0b2cfebf840acf84a",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-api.aws_security_group.rds",
            "module.todo-api.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}